@@ -1,14 +1,12 @@
-![Java 11+](https://img.shields.io/badge/Java-11+-yellow?logo=openjdk)
+![Java 11+](https://img.shields.io/badge/Java-11--20-brown?logo=openjdk)
 [![Build Status](https://github.com/ascopes/java-compiler-testing/actions/workflows/build.yml/badge.svg?branch=main)](https://github.com/ascopes/java-compiler-testing/actions/workflows/build.yml)
-[![javadoc](https://javadoc.io/badge2/io.github.ascopes.jct/java-compiler-testing/javadoc.svg)](https://javadoc.io/doc/io.github.ascopes.jct/java-compiler-testing)
-[![Code Coverage](https://codecov.io/gh/ascopes/java-compiler-testing/branch/main/graph/badge.svg?token=VT74BP2742)](https://codecov.io/gh/ascopes/java-compiler-testing)
 [![Maven Central](https://img.shields.io/maven-central/v/io.github.ascopes.jct/java-compiler-testing)](https://repo1.maven.org/maven2/io/github/ascopes/jct/java-compiler-testing)
-[![Issues](https://img.shields.io/github/issues-raw/ascopes/java-compiler-testing?color=orange)](https://github.com/ascopes/java-compiler-testing/issues)
+[![Code Coverage](https://codecov.io/gh/ascopes/java-compiler-testing/branch/main/graph/badge.svg?token=VT74BP2742)](https://codecov.io/gh/ascopes/java-compiler-testing)
+[![javadoc (latest release)](https://javadoc.io/badge2/io.github.ascopes.jct/java-compiler-testing/javadoc.svg)](https://javadoc.io/doc/io.github.ascopes.jct/java-compiler-testing)
+[![javadoc (main branch)](https://img.shields.io/badge/javadoc-latest--snapshot-darkgreen)](https://ascopes.github.io/java-compiler-testing)
+[![Issues](https://img.shields.io/github/issues-raw/ascopes/java-compiler-testing?color=red)](https://github.com/ascopes/java-compiler-testing/issues)
 [![License](https://img.shields.io/github/license/ascopes/java-compiler-testing?color=blueviolet)](https://github.com/ascopes/java-compiler-testing/blob/main/LICENSE.txt)
 ![Activity](https://img.shields.io/github/commit-activity/y/ascopes/java-compiler-testing)
-
-<!-- [![Releases](https://img.shields.io/github/downloads/ascopes/java-compiler-testing/total)](https://github.com/ascopes/java-compiler-testing/releases) -->
-<!-- [![Maven Central](https://img.shields.io/maven-central/v/com.github.ascopes.jct/java-compiler-testing)](https://search.maven.org/artifact/com.github.ascopes.jct/java-compiler-testing) -->
 
 # java-compiler-testing
 
@@ -38,6 +36,63 @@ Full JUnit5 integration is provided to help streamline the development process.
 **This module is still under development.** Any contributions or feedback
 are always welcome!
 
+## Features
+
+- Implements in-memory file management compatible with the NIO Path and
+  FileSystem API, enabling tests to run without write access to the host
+  system, and without awkward resource-cleanup logic.
+- Enables running compilations on combinations of real files, class path
+  resources, in-memory files, JARs, WARs, EARs, ZIP files, etc.
+- Null-safe API (using [JSpecify](https://jspecify.dev/))
+- [Tested on multiple existing frameworks](acceptance-tests/) including 
+  Avaje, Spring, Lombok, MapStruct, ErrorProne, and CheckerFramework.
+- Supports Java 9 JPMS modules.
+- Ability to customise a large assortment of configuration parameters
+  to enable you to test exactly what you need to test.
+- Provides support for `javac` out of the box, with the
+  ability to support other JSR-199 implementations if desired --
+  just make use of one of the compiler classes, or make your own!
+- Implements a fully functional JSR-199 Path JavaFileManager.
+- Fluent syntax for creating configurations, executing them, and
+  inspecting the results.
+- Integration with [AssertJ](https://joel-costigliola.github.io/assertj/)
+  for fluent assertions on compilation results.
+- Ability to have multiple source roots, just like when using
+  `javac` normally.
+- Diagnostic reporting includes stack traces, so you can find out
+  exactly what triggered a diagnostic and begin debugging any
+  issues in your applications quickly.
+- Helpful error messages to assist in annotation processor development:
+
+```
+[main] ERROR io.github.ascopes.jct.diagnostics.TracingDiagnosticListener - cannot find symbol
+  symbol:   class Generated
+  location: package javax.annotation
+[main] INFO io.github.ascopes.jct.compilers.CompilationFactory - Compilation with compiler Javac 9 failed after ~332.3ms
+
+java.lang.AssertionError: Expected a successful compilation, but it failed.
+
+Diagnostics:
+
+ - [ERROR] compiler.err.cant.resolve.location /sources-f1728706-5de5-4b89-9a6a-b51233ce67c8/io/github/ascopes/jct/examples/immutables/dataclass/ImmutableAnimal.java (at line 25, col 18)
+
+   23 | @SuppressWarnings({"all"})
+   24 | @ParametersAreNonnullByDefault
+   25 | @javax.annotation.Generated("org.immutables.processor.ProxyProcessor")
+      +  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
+   26 | @Immutable    
+   27 | @CheckReturnValue
+
+  cannot find symbol
+  symbol:   class Generated
+  location: package javax.annotation
+  
+  at io.github.ascopes.jct.acceptancetests.immutables.ImmutablesIntegrationTest.immutablesValueProducesTheExpectedClass(ImmutablesIntegrationTest.java:66)
+  at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
+  at java.base/java.lang.reflect.Method.invoke(Method.java:577)
+  ...
+```
+
 ## Installation
 
 The project can be found on Maven Central.
@@ -60,6 +115,19 @@ repositories {
 
 dependencies {
   testImplementation("io.github.ascopes.jct:java-compiler-testing:$jctVersion")
+}
+```
+
+## JPMS
+
+If your tests make use of JPMS (i.e. they have a `module-info.java` somewhere), then you will want
+to add a requirement for this module like so:
+
+```java
+open module my.tests {
+  ...
+  requires io.github.ascopes.jct;
+  ...
 }
 ```
 
@@ -234,60 +302,46 @@ class ExampleTest {
 }
 ```
 
-## Features
+## Tips to improve build speeds
 
-- Implements in-memory file management compatible with the NIO Path and
-  FileSystem API, enabling tests to run without write access to the host
-  system, and without awkward resource-cleanup logic.
-- Ability to run compilation on combinations of real files, class path
-  resources, and in-memory files.
-- Supports Java 9 JPMS modules as intended.
-- Ability to customise a large assortment of configuration parameters
-  to enable you to test exactly what you need to test.
-- Provides support for `javac` out of the box, with the
-  ability to support other JSR-199 implementations if desired --
-  just make use of one of the compiler classes, or make your own!
-- Implements a fully functional JSR-199 Path JavaFileManager.
-- Fluent syntax for creating configurations, executing them, and
-  inspecting the results.
-- Integration with AssertJ for fluent assertions on compilation
-  results.
-- Ability to have multiple source roots, just like when using
-  `javac` normally.
-- Diagnostic reporting includes stacktraces, so you can find out
-  exactly what triggered a diagnostic and begin debugging any
-  issues in your applications quickly.
-- Helpful error messages to assist in annotation processor development
+Running a Java Compiler and maintaining a virtual file system is not the simplest
+thing to achieve internally. As a result, some tests may take a few hundred milliseconds
+to execute in some cases, especially when the JVM is warming up. There are a few things
+you can do to ensure that tests are as snappy as possible, however.
 
+### Parallel test runners
+
+JUnit5 has the ability to configure tests to run in parallel.
+
+You can configure this by creating a file in your test resources named
+`junit-platform.properties` and add the following content to it.
+
+```properties
+junit.jupiter.execution.parallel.enabled=true
+junit.jupiter.execution.parallel.mode.classes.default=SAME_THREAD
+junit.jupiter.execution.parallel.mode.default=CONCURRENT
 ```
-[main] ERROR io.github.ascopes.jct.diagnostics.TracingDiagnosticListener - cannot find symbol
-  symbol:   class Generated
-  location: package javax.annotation
-[main] INFO io.github.ascopes.jct.compilers.CompilationFactory - Compilation with compiler Javac 9 failed after ~332.3ms
 
-java.lang.AssertionError: Expected a successful compilation, but it failed.
+Within build systems like Maven, you can also enable your builds to run
+in parallel where desired. In the case of Maven, you can pass `-T1C` on the
+command line to make it run one parallel operation on each CPU core.
 
-Diagnostics:
+### JVM flags
 
- - [ERROR] compiler.err.cant.resolve.location /sources-f1728706-5de5-4b89-9a6a-b51233ce67c8/io/github/ascopes/jct/examples/immutables/dataclass/ImmutableAnimal.java (at line 25, col 18)
+You can provide JVM flags to the runtime that executes your test packs. For Maven Surefire,
+you do this by defining an `<argLine/>` attribute in your `<properties/>` with a string value
+holding the flags you wish to use.
 
-   23 | @SuppressWarnings({"all"})
-   24 | @ParametersAreNonnullByDefault
-   25 | @javax.annotation.Generated("org.immutables.processor.ProxyProcessor")
-      +  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-   26 | @Immutable
-   27 | @CheckReturnValue
-
-  cannot find symbol
-  symbol:   class Generated
-  location: package javax.annotation
+1. Enforce level-1 tiered compilation - this will prevent the JVM wasting time performing
+   more complicated JIT compilation passes over your code when it usually does not provide
+   much benefit on short-lived code. You can pass 
+   `-XX:+TieredCompilation -XX:TieredStopAtLevel=1` to set this up. Enabling this in the JCT
+   builds reduced the overall build time by around 20 seconds.
+2. Use the ZGC - the ZGC will reduce lag when performing garbage collection on code that
+   has a high churn of objects. On Java 11, the ZGC is an experimental feature, which needs
+   to be enabled with `-XX:+UnlockExperimentalOptions -XX:+UseZGC`. On Java 17, you just
+   need to pass `-XX:+UseZGC` alone.
   
-  at io.github.ascopes.jct.acceptancetests.immutables.ImmutablesIntegrationTest.immutablesValueProducesTheExpectedClass(ImmutablesIntegrationTest.java:66)
-  at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
-  at java.base/java.lang.reflect.Method.invoke(Method.java:577)
-  ...
-```
-
 ## ECJ support
 
 While this module initially supported ECJ, there were a number of problems relating to bugs
